--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
     "faker": "^5.5.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.0",
     "mongoose-paginate-v2": "^1.7.4",
     "multer": "^1.4.5-lts.1",
@@ -32,6 +33,8 @@
     "passport-local": "^1.0.0",
     "socket.io": "^4.7.2",
     "strategy": "^1.1.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "winston": "^3.11.0"
   },
   "type": "module",
