--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon src/app.js --mode dev",
-    "start:test": "nodemon src/app.js --mode test",
-    "start:prod": "nodemon src/app.js --mode prod",
-    "start:fs": "nodemon src/app.js --fs"
+    "start:productstest": "mocha test/products.test.js --mode test",
+    "start:cartstest": "mocha test/carts.test.js --mode test",
+    "start:sessionstest": "mocha test/sessions.test.js --mode test",
+    "start:prod": "nodemon src/app.js --mode prod"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "chai": "^5.0.0",
     "commander": "^11.1.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
@@ -23,6 +25,7 @@
     "express-session": "^1.17.3",
     "faker": "^5.5.3",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^10.2.0",
     "mongoose": "^7.6.0",
     "mongoose-paginate-v2": "^1.7.4",
     "multer": "^1.4.5-lts.1",
@@ -33,6 +36,7 @@
     "passport-local": "^1.0.0",
     "socket.io": "^4.7.2",
     "strategy": "^1.1.1",
+    "supertest": "^6.3.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.11.0"
